Issue #12 - Align proposals section headline to end

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -33,3 +33,7 @@ a {
   color: $color-primary;
   font-weight: $font-weight-semi-bold;
 }
+
+.text-end {
+  text-align: end;
+}
